2022-01/04-week/ingress/ingress-node-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-node-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: svc-node-web-v1
            port:
              number: 80

      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: svc-node-web-v2
            port:
              number: 80
